<resources>
    <string name="app_name">Rejoice</string>
    <string name="facebook_key">1673357266254895</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nextBtn">Get Started</string>


    <!--Rejoice activity-->
    <string name="login_to_order">LOGIN TO ORDER DELICIOUS FOOD</string>
    <string name="promise">We will never post anything without your permission.</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="skip_login">Skip Login</string>
    <string name="cancel_login">Cancel Login</string>

    <string name="about_title">About the Octagon Project</string>

    <string name="about_text">Dr. Gary Crossland is a Biblical Greek Professor, as well as an historian, author and documentary producer. For many years, he has been leading tours to the Holy Land, publishing videos about Israel, Jordan and Egypt, and guiding fellow scholars to rare and significant Biblical sites. In his journeys Dr. Crossland has literally retraced every recorded footstep of Jesus Christ, studying each site, and archiving thousands of hours of video footage.\n\n

It seems divinely providential that, from a young age, Gary Crossland would pursue a lifelong career doing what his last name so obviously denotes; that is, taking people to the land of the cross. Dr. Crossland spends about three months out of every year in Israel and Jordan, filming, teaching and leading tours.\n\n

He is also the author of The Merged Gospels – the only book in history to literally translate the four canonized Gospels from the original Greek, breaking them down into four columns, then word-by-word, and reassembling them into a flowing narrative, without removing one word of Scripture. Scholars have called The Merged Gospels “a masterpiece”, “excellent”, “indispensable”, “a major work”, “powerful and unique”, and “highly recommended”.\n\n

In our many travels to Israel, we have to come to realize that for every person who is fortunate enough to visit the Holy Land, there are hundreds of others who want to go, but cannot for various reasons – finances, health, mobility, scheduling, or family conflicts.\n\n

In 2012 we learned about the emerging technology of virtual reality (used mostly by gamers), and its younger sibling, augmented reality, which primarily uses 360° live-action video. Through the convergence of history, Biblical geography and this new immersive video technology The Octagon Project was born in 2013.\n\n

Today, The Octagon Project has grown into a team of highly-skilled video cameramen and technicians, specifically trained in the field of 360° full-spherical ultra-high-definition video production.\n\n

Using The Merged Gospels as a walking guide through the Holy Land, The Octagon Project crew has captured and produced countless hours of breathtaking 360° video in over 200 stunning locations. The entire project is the equivalent of a 30-day, expertly-guided tour to the Holy Land.\n\n

Our extended Octagon Project family includes a number of strategic partners, advisors, technicians and Israeli and Jordanian crew members.\n\n

The Octagon Project is a 501(c)(3) charitable corporation with our main offices in San Antonio, Texas.</string>

    <string name="bookstore_policies_title">Bookstore Policies</string>
    <string name="bookstore_policies_text">• For bookstore orders, please call 405-227-8243, or email us at staff@octagonproject.com.\n\n

• Credit cards will be accepted as the method of payment. If you wish us to keep your credit card information on file, we will process your order accordingly.\n\n

• All publications will be sold to bookstores for 50% of their suggested retail price, plus the cost for shipping.\n\n

• All products will be shipped on the same day, or the following business day.\n\n

• Rush orders will be shipped, if you so instruct, by one of the express mail services.\n\n

• If you prefer, we will ship via your account with any major carrier service.\n\n

• Prices are subject to change without notices, and all sales are final.</string>


    <string name="private_policy_title">Privacy Policy</string>
    <string name="private_policy_text">We will never share your personal information with companies, organizations and individuals outside of The Octagon Project. We work hard to protect you from unauthorized access to or unauthorized alteration, disclosure or destruction of the information that we hold. For this reason:\n\n

1. We encrypt many of our services using SSL (Secure Socket Layer), offering the strongest online encryption on the market.\n\n

2. We process all of your credit card payments through PayPal, which offers our customers a wide choice of payment options, and a secure payment ecosystem for you to securely transact with us in more than 200 global markets, and in most global currencies.\n\n

3. Our servers are housed at GoDaddy, offering the industry’s strongest protection against viruses, hackers and identity thieves. GoDaddy constantly reviews their information collection, storage and processing practices, including physical security measures, to guard you against unauthorized access to your data.\n\n

4. When processed online, your credit card information is never captured by The Octagon Project, and is not known by anyone in our company. Additionally, all of your other personal information is restricted, and accessible to only the highest-level employees, who themselves are under strict contractual confidentiality obligations, and who will be terminated if they fail to meet these obligations.</string>

    <string name="filming_permission_title">Filming Permissions</string>
    <string name="filming_permission_text">The Octagon Project has been filming documentaries in Israel since 2005, and specifically using 360° video cameras since July, 2013.\n\n

In its tour videos The Octagon Project had obtained written permission from every shrine and every archeological site that required such permission on the date of filming. Additionally, we were given verbal permission to film at these same locations on the day of filming by the local attendants at each site.\n\n

All shrines controlled by the Custodia Terrae Sancta (the Franciscans) were filmed prior to February 11th, 2016. Subsequent to this date the Franciscans have officially disallowed any 360° filming of their shrines going forward. This stipulation reads, “7. No permission will be given to film with 360-degree cameras.” Christian Information Center\n\n

The Octagon Project respects the right that the Custodia Terrae Sancta has over all activity at their shrines, and we have agreed to fully comply with this stipulation. Therefore, as of February 11th, 2016, we are no longer doing any 360° filming at shrines exclusively controlled by the Custodia Terrae Sanctae.\n\n

Copies of specific written permissions may be furnished to appropriate parties upon request.\n\n

Legal counsel for The Octagon Project is provided by The Justice Foundation - Texas Justice Foundation</string>
</resources>
