<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    tools:context=".RejoiceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/id_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_gravity="center|left" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:checked="true"
                android:clickable="false" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:clickable="false" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:clickable="false" />


            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:clickable="false" />

            <RadioButton
                android:id="@+id/rb5"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:clickable="false" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#cc000000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_order"
            android:paddingTop="5dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:paddingBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/login_facebook"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/fb_button_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" >

                <TextView
                    android:text="f"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/login_google"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/google_button_color"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp" >

                <TextView
                    android:text="g+"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promise"
            android:textColor="#ffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_horizontal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line_color"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_login"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>
</LinearLayout>
